Require ReceiveBTCAddress as input
